syntax = "proto3";

package com.seed.groups.v1alpha;

option go_package = "seed/backend/genproto/groups/v1alpha;groups";

// API service exposed by the website server.
// It's exposed as gRPC over Libp2p.
service Website {
  // Gets the public information about the website.
  // This information is also available as JSON over HTTP on `/.well-known/hypermedia-site`.
  rpc GetSiteInfo(GetSiteInfoRequest) returns (PublicSiteInfo);

  // Initializes the server to become a website for a specific group.
  rpc InitializeServer(InitializeServerRequest) returns (InitializeServerResponse);

  // Publishes blobs to the website.
  rpc PublishBlobs(PublishBlobsRequest) returns (PublishBlobsResponse);
}

// Request for getting the public site information.
message GetSiteInfoRequest {}

// Request for initializing the site.
message InitializeServerRequest {
  // Required. The secret provided during the site deployment process.
  // It's a trust-on-first-use, one-time-use secret that is used for the initial site setup,
  // during which the site remembers the groups that it must serve, and who is the owner of the site.
  string secret = 1;

  // Required. ID of the group that should be served on this site.
  string group_id = 2;
}

// Response for initializing the site.
message InitializeServerResponse {}

// Request for publishing blobs.
message PublishBlobsRequest {
  // List of blob CIDs that we expect to be available on the site.
  repeated string blobs = 1;
}

// Response for publishing blobs.
message PublishBlobsResponse {}

// Publicly available information about the website.
message PublicSiteInfo {
  // P2P information for the website.
  PeerInfo peer_info = 1;

  // Group ID being served on the site.
  // Can be empty if site is not initialized yet.
  string group_id = 2;

  // Version of the group according to the website server.
  string group_version = 3;
}

// Peer information for P2P network.
message PeerInfo {
  // Libp2p peer ID.
  string peer_id = 1;

  // Multiaddrs for the peer,
  // without the peer ID,
  // in order to use it with libp2p AddrInfo API.
  repeated string addrs = 2;

  // Seed Account ID of the site.
  string account_id = 3;
}
