syntax = "proto3";

package com.seed.networking.v1alpha;

option go_package = "seed/backend/genproto/networking/v1alpha;networking";

// Networking API service of the Seed daemon.
service Networking {
  // Lookup details about a known peer.
  rpc GetPeerInfo(GetPeerInfoRequest) returns (PeerInfo);

  // List peers by status.
  rpc ListPeers(ListPeersRequest) returns (ListPeersResponse);

  // Establishes a direct connection with a given peer explicitly.
  rpc Connect(ConnectRequest) returns (ConnectResponse);
}

// Request to get peer's addresses.
message GetPeerInfoRequest {
  // Required. CID-encoded Peer ID (a.k.a. Device ID).
  string device_id = 1;
}

// Request to get peer's addresses.
message ListPeersRequest {}

// Various details about a list of peers.
message ListPeersResponse {
  // List of known Hyper Media peers.
  repeated PeerInfo peers = 1;
}

// Request for connecting to a peer explicitly.
message ConnectRequest {
  // A list of multiaddrs for the same peer ID to attempt p2p connection.
  // For example `/ip4/10.0.0.1/tcp/55000/p2p/QmDeadBeef`.
  repeated string addrs = 1;
}

// Response for conneting to a peer.
message ConnectResponse {}

// Various details about a known peer.
message PeerInfo {
  // Libp2p peer ID.
  string id = 1;

  // Account ID that this peer is bound to.
  string account_id = 2;

  // List of known multiaddrs of the request peer.
  repeated string addrs = 3;

  // Connection status of our node with a remote peer.
  ConnectionStatus connection_status = 4;
}

// Indicates connection status of our node with a remote peer.
// Mimics libp2p connectedness.
enum ConnectionStatus {
  // NotConnected means no connection to peer, and no extra information (default).
  NOT_CONNECTED = 0;

  // Connected means has an open, live connection to peer.
  CONNECTED = 1;

  // CanConnect means recently connected to peer, terminated gracefully.
  CAN_CONNECT = 2;

  // CannotConnect means recently attempted connecting but failed to connect.
  // (should signal "made effort, failed").
  CANNOT_CONNECT = 3;
}
